// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Config Snapshots — Entry Names > astro config entries should match snapshot 1`] = `
[
  "astro/base",
  "astro/base/javascript",
  "astro/base/plugin",
  "astro/base/typescript",
  "astro/recommended",
  "eslint-config-astro/custom",
  "eslint-config-astro/disable-type-checked",
  "eslint-config-astro/virtual-scripts",
]
`;

exports[`Config Snapshots — Entry Names > core config entries should match snapshot 1`] = `
[
  "@eslint/js/recommended",
  "eslint-config/custom-rules",
  "eslint-config/plugins",
  "eslint-config/stylistic",
]
`;

exports[`Config Snapshots — Entry Names > expo config entries should match snapshot 1`] = `
[
  "eslint-config-expo/custom",
]
`;

exports[`Config Snapshots — Entry Names > nest config entries should match snapshot 1`] = `
[
  "@darraghor/nestjs-typed/base",
  "@darraghor/nestjs-typed/recommended",
  "eslint-config-nest/custom",
]
`;

exports[`Config Snapshots — Entry Names > next config entries should match snapshot 1`] = `
[
  "eslint-config-next/custom",
  "eslint-config-next/ignores",
  "eslint-config-next/plugin",
]
`;

exports[`Config Snapshots — Entry Names > react config entries should match snapshot 1`] = `
[
  "eslint-config-react/custom",
  "eslint-config-react/recommended",
]
`;

exports[`Config Snapshots — Entry Names > typescript config entries should match snapshot 1`] = `
[
  "eslint-config-typescript/rules",
  "typescript-eslint/base",
  "typescript-eslint/base",
  "typescript-eslint/disable-type-checked",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/eslint-recommended",
  "typescript-eslint/strict-type-checked",
  "typescript-eslint/stylistic-type-checked",
]
`;

exports[`Config Snapshots — Entry Names > vue config entries should match snapshot 1`] = `
[
  "eslint-config-vue/disable-type-checked",
  "eslint-config-vue/rules",
  "vue/base/setup",
  "vue/base/setup-for-vue",
  "vue/essential/rules",
  "vue/recommended/rules",
  "vue/strongly-recommended/rules",
]
`;

exports[`Config Snapshots — Rule Names > astro config rules should match snapshot 1`] = `
[
  "@stylistic/comma-dangle",
  "@stylistic/jsx-indent",
  "@stylistic/jsx-one-expression-per-line",
  "@stylistic/jsx-tag-spacing",
  "@stylistic/quote-props",
  "@typescript-eslint/await-thenable",
  "@typescript-eslint/consistent-return",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/dot-notation",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-array-delete",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-confusing-void-expression",
  "@typescript-eslint/no-deprecated",
  "@typescript-eslint/no-duplicate-type-constituents",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-for-in-array",
  "@typescript-eslint/no-implied-eval",
  "@typescript-eslint/no-meaningless-void-operator",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-misused-spread",
  "@typescript-eslint/no-mixed-enums",
  "@typescript-eslint/no-redundant-type-constituents",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-qualifier",
  "@typescript-eslint/no-unnecessary-template-expression",
  "@typescript-eslint/no-unnecessary-type-arguments",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unnecessary-type-conversion",
  "@typescript-eslint/no-unnecessary-type-parameters",
  "@typescript-eslint/no-unsafe-argument",
  "@typescript-eslint/no-unsafe-assignment",
  "@typescript-eslint/no-unsafe-call",
  "@typescript-eslint/no-unsafe-enum-comparison",
  "@typescript-eslint/no-unsafe-member-access",
  "@typescript-eslint/no-unsafe-return",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unsafe-unary-minus",
  "@typescript-eslint/no-unused-expressions",
  "@typescript-eslint/no-useless-default-assignment",
  "@typescript-eslint/non-nullable-type-assertion-style",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-find",
  "@typescript-eslint/prefer-includes",
  "@typescript-eslint/prefer-nullish-coalescing",
  "@typescript-eslint/prefer-optional-chain",
  "@typescript-eslint/prefer-promise-reject-errors",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/prefer-readonly-parameter-types",
  "@typescript-eslint/prefer-reduce-type-parameter",
  "@typescript-eslint/prefer-regexp-exec",
  "@typescript-eslint/prefer-return-this-type",
  "@typescript-eslint/prefer-string-starts-ends-with",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/related-getter-setter-pairs",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/require-await",
  "@typescript-eslint/restrict-plus-operands",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "@typescript-eslint/unbound-method",
  "@typescript-eslint/use-unknown-in-catch-callback-variable",
  "astro/missing-client-only-directive-value",
  "astro/no-conflict-set-directives",
  "astro/no-deprecated-astro-canonicalurl",
  "astro/no-deprecated-astro-fetchcontent",
  "astro/no-deprecated-astro-resolve",
  "astro/no-deprecated-getentrybyslug",
  "astro/no-unused-define-vars-in-style",
  "astro/valid-compile",
  "no-unused-expressions",
  "no-unused-vars",
  "prettier/prettier",
  "react/destructuring-assignment",
  "react/jsx-filename-extension",
  "react/jsx-key",
  "react/jsx-no-undef",
  "react/jsx-props-no-spreading",
  "react/no-unescaped-entities",
  "react/no-unknown-property",
  "react/react-in-jsx-scope",
  "react/require-default-props",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > core config rules should match snapshot 1`] = `
[
  "@stylistic/array-bracket-spacing",
  "@stylistic/array-element-newline",
  "@stylistic/arrow-parens",
  "@stylistic/arrow-spacing",
  "@stylistic/block-spacing",
  "@stylistic/brace-style",
  "@stylistic/comma-dangle",
  "@stylistic/comma-spacing",
  "@stylistic/comma-style",
  "@stylistic/computed-property-spacing",
  "@stylistic/dot-location",
  "@stylistic/eol-last",
  "@stylistic/function-call-argument-newline",
  "@stylistic/function-paren-newline",
  "@stylistic/generator-star-spacing",
  "@stylistic/implicit-arrow-linebreak",
  "@stylistic/indent",
  "@stylistic/indent-binary-ops",
  "@stylistic/jsx-closing-bracket-location",
  "@stylistic/jsx-closing-tag-location",
  "@stylistic/jsx-curly-brace-presence",
  "@stylistic/jsx-curly-newline",
  "@stylistic/jsx-curly-spacing",
  "@stylistic/jsx-equals-spacing",
  "@stylistic/jsx-first-prop-new-line",
  "@stylistic/jsx-function-call-newline",
  "@stylistic/jsx-indent-props",
  "@stylistic/jsx-max-props-per-line",
  "@stylistic/jsx-one-expression-per-line",
  "@stylistic/jsx-quotes",
  "@stylistic/jsx-tag-spacing",
  "@stylistic/jsx-wrap-multilines",
  "@stylistic/key-spacing",
  "@stylistic/keyword-spacing",
  "@stylistic/lines-around-comment",
  "@stylistic/lines-between-class-members",
  "@stylistic/max-len",
  "@stylistic/max-statements-per-line",
  "@stylistic/member-delimiter-style",
  "@stylistic/multiline-comment-style",
  "@stylistic/multiline-ternary",
  "@stylistic/new-parens",
  "@stylistic/no-extra-parens",
  "@stylistic/no-extra-semi",
  "@stylistic/no-floating-decimal",
  "@stylistic/no-mixed-operators",
  "@stylistic/no-mixed-spaces-and-tabs",
  "@stylistic/no-multi-spaces",
  "@stylistic/no-multiple-empty-lines",
  "@stylistic/no-tabs",
  "@stylistic/no-trailing-spaces",
  "@stylistic/no-whitespace-before-property",
  "@stylistic/object-curly-spacing",
  "@stylistic/object-property-newline",
  "@stylistic/operator-linebreak",
  "@stylistic/padded-blocks",
  "@stylistic/padding-line-between-statements",
  "@stylistic/quote-props",
  "@stylistic/quotes",
  "@stylistic/rest-spread-spacing",
  "@stylistic/semi",
  "@stylistic/semi-spacing",
  "@stylistic/space-before-blocks",
  "@stylistic/space-before-function-paren",
  "@stylistic/space-in-parens",
  "@stylistic/space-infix-ops",
  "@stylistic/space-unary-ops",
  "@stylistic/spaced-comment",
  "@stylistic/template-curly-spacing",
  "@stylistic/template-tag-spacing",
  "@stylistic/type-annotation-spacing",
  "@stylistic/type-generic-spacing",
  "@stylistic/type-named-tuple-spacing",
  "@stylistic/wrap-iife",
  "@stylistic/yield-star-spacing",
  "array-callback-return",
  "arrow-body-style",
  "brace-style",
  "camelcase",
  "comma-dangle",
  "constructor-super",
  "eqeqeq",
  "for-direction",
  "func-style",
  "getter-return",
  "import/export",
  "import/first",
  "import/no-duplicates",
  "indent",
  "jsx-a11y/alt-text",
  "no-async-promise-executor",
  "no-case-declarations",
  "no-class-assign",
  "no-compare-neg-zero",
  "no-cond-assign",
  "no-const-assign",
  "no-constant-binary-expression",
  "no-constant-condition",
  "no-control-regex",
  "no-debugger",
  "no-delete-var",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-else-if",
  "no-dupe-keys",
  "no-duplicate-case",
  "no-empty",
  "no-empty-character-class",
  "no-empty-pattern",
  "no-empty-static-block",
  "no-ex-assign",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-func-assign",
  "no-global-assign",
  "no-import-assign",
  "no-invalid-regexp",
  "no-irregular-whitespace",
  "no-loss-of-precision",
  "no-misleading-character-class",
  "no-nested-ternary",
  "no-new",
  "no-new-native-nonconstructor",
  "no-nonoctal-decimal-escape",
  "no-obj-calls",
  "no-octal",
  "no-prototype-builtins",
  "no-redeclare",
  "no-regex-spaces",
  "no-self-assign",
  "no-setter-return",
  "no-shadow-restricted-names",
  "no-sparse-arrays",
  "no-this-before-super",
  "no-unassigned-vars",
  "no-undef",
  "no-unexpected-multiline",
  "no-unreachable",
  "no-unsafe-finally",
  "no-unsafe-negation",
  "no-unsafe-optional-chaining",
  "no-unused-labels",
  "no-unused-private-class-members",
  "no-unused-vars",
  "no-use-before-define",
  "no-useless-assignment",
  "no-useless-backreference",
  "no-useless-catch",
  "no-useless-constructor",
  "no-useless-escape",
  "no-useless-return",
  "no-void",
  "no-with",
  "operator-linebreak",
  "prefer-arrow-callback",
  "prefer-promise-reject-errors",
  "prefer-regex-literals",
  "preserve-caught-error",
  "quote-props",
  "quotes",
  "require-yield",
  "simple-import-sort/imports",
  "space-before-function-paren",
  "unused-imports/no-unused-imports",
  "use-isnan",
  "valid-typeof",
]
`;

exports[`Config Snapshots — Rule Names > expo config rules should match snapshot 1`] = `
[
  "@typescript-eslint/array-type",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/no-dupe-class-members",
  "@typescript-eslint/no-empty-object-type",
  "@typescript-eslint/no-extra-non-null-assertion",
  "@typescript-eslint/no-redeclare",
  "@typescript-eslint/no-require-imports",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-constructor",
  "@typescript-eslint/no-wrapper-object-types",
  "eqeqeq",
  "expo/no-dynamic-env-var",
  "expo/no-env-var-destructuring",
  "expo/use-dom-exports",
  "import/default",
  "import/export",
  "import/first",
  "import/named",
  "import/namespace",
  "import/no-unresolved",
  "import/order",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-keys",
  "no-duplicate-case",
  "no-empty-character-class",
  "no-empty-pattern",
  "no-extend-native",
  "no-extra-bind",
  "no-redeclare",
  "no-undef",
  "no-unreachable",
  "no-unsafe-negation",
  "no-unused-expressions",
  "no-unused-labels",
  "no-unused-vars",
  "no-useless-constructor",
  "no-var",
  "no-with",
  "react-hooks/component-hook-factories",
  "react-hooks/config",
  "react-hooks/error-boundaries",
  "react-hooks/exhaustive-deps",
  "react-hooks/gating",
  "react-hooks/globals",
  "react-hooks/immutability",
  "react-hooks/incompatible-library",
  "react-hooks/preserve-manual-memoization",
  "react-hooks/purity",
  "react-hooks/refs",
  "react-hooks/rules-of-hooks",
  "react-hooks/set-state-in-effect",
  "react-hooks/set-state-in-render",
  "react-hooks/static-components",
  "react-hooks/unsupported-syntax",
  "react-hooks/use-memo",
  "react/display-name",
  "react/jsx-no-duplicate-props",
  "react/jsx-no-undef",
  "react/jsx-uses-react",
  "react/jsx-uses-vars",
  "react/no-danger-with-children",
  "react/no-deprecated",
  "react/no-direct-mutation-state",
  "react/no-string-refs",
  "react/no-this-in-sfc",
  "react/no-unknown-property",
  "react/require-render-return",
  "simple-import-sort/imports",
  "unicode-bom",
  "use-isnan",
  "valid-typeof",
]
`;

exports[`Config Snapshots — Rule Names > nest config rules should match snapshot 1`] = `
[
  "@darraghor/nestjs-typed/all-properties-are-whitelisted",
  "@darraghor/nestjs-typed/all-properties-have-explicit-defined",
  "@darraghor/nestjs-typed/api-enum-property-best-practices",
  "@darraghor/nestjs-typed/api-method-should-specify-api-operation",
  "@darraghor/nestjs-typed/api-method-should-specify-api-response",
  "@darraghor/nestjs-typed/api-methods-should-be-guarded",
  "@darraghor/nestjs-typed/api-operation-summary-description-capitalized",
  "@darraghor/nestjs-typed/api-property-matches-property-optionality",
  "@darraghor/nestjs-typed/api-property-returning-array-should-set-array",
  "@darraghor/nestjs-typed/api-property-should-have-api-extra-models",
  "@darraghor/nestjs-typed/controllers-should-supply-api-tags",
  "@darraghor/nestjs-typed/injectable-should-be-provided",
  "@darraghor/nestjs-typed/no-duplicate-decorators",
  "@darraghor/nestjs-typed/param-decorator-name-matches-route-param",
  "@darraghor/nestjs-typed/provided-injected-should-match-factory-parameters",
  "@darraghor/nestjs-typed/sort-module-metadata-arrays",
  "@darraghor/nestjs-typed/use-correct-endpoint-naming-convention",
  "@darraghor/nestjs-typed/use-dependency-injection",
  "@darraghor/nestjs-typed/use-injectable-provided-token",
  "@darraghor/nestjs-typed/validate-nested-of-array-should-set-each",
  "@darraghor/nestjs-typed/validated-non-primitive-property-needs-type-decorator",
  "@darraghor/nestjs-typed/validation-pipe-should-use-forbid-unknown",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > next config rules should match snapshot 1`] = `
[
  "@next/next/google-font-display",
  "@next/next/google-font-preconnect",
  "@next/next/inline-script-id",
  "@next/next/next-script-for-ga",
  "@next/next/no-assign-module-variable",
  "@next/next/no-async-client-component",
  "@next/next/no-before-interactive-script-outside-document",
  "@next/next/no-css-tags",
  "@next/next/no-document-import-in-page",
  "@next/next/no-duplicate-head",
  "@next/next/no-head-element",
  "@next/next/no-head-import-in-document",
  "@next/next/no-html-link-for-pages",
  "@next/next/no-img-element",
  "@next/next/no-page-custom-font",
  "@next/next/no-script-component-in-head",
  "@next/next/no-styled-jsx-in-document",
  "@next/next/no-sync-scripts",
  "@next/next/no-title-in-document-head",
  "@next/next/no-typos",
  "@next/next/no-unwanted-polyfillio",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > react config rules should match snapshot 1`] = `
[
  "react-hooks/component-hook-factories",
  "react-hooks/config",
  "react-hooks/error-boundaries",
  "react-hooks/exhaustive-deps",
  "react-hooks/gating",
  "react-hooks/globals",
  "react-hooks/immutability",
  "react-hooks/incompatible-library",
  "react-hooks/preserve-manual-memoization",
  "react-hooks/purity",
  "react-hooks/refs",
  "react-hooks/rules-of-hooks",
  "react-hooks/set-state-in-effect",
  "react-hooks/set-state-in-render",
  "react-hooks/static-components",
  "react-hooks/unsupported-syntax",
  "react-hooks/use-memo",
  "react/boolean-prop-naming",
  "react/button-has-type",
  "react/destructuring-assignment",
  "react/display-name",
  "react/hook-use-state",
  "react/jsx-boolean-value",
  "react/jsx-closing-bracket-location",
  "react/jsx-closing-tag-location",
  "react/jsx-curly-brace-presence",
  "react/jsx-curly-newline",
  "react/jsx-fragments",
  "react/jsx-handler-names",
  "react/jsx-key",
  "react/jsx-max-depth",
  "react/jsx-no-comment-textnodes",
  "react/jsx-no-duplicate-props",
  "react/jsx-no-leaked-render",
  "react/jsx-no-target-blank",
  "react/jsx-no-undef",
  "react/jsx-pascal-case",
  "react/jsx-uses-react",
  "react/jsx-uses-vars",
  "react/jsx-wrap-multilines",
  "react/no-children-prop",
  "react/no-danger-with-children",
  "react/no-deprecated",
  "react/no-direct-mutation-state",
  "react/no-find-dom-node",
  "react/no-is-mounted",
  "react/no-multi-comp",
  "react/no-render-return-value",
  "react/no-string-refs",
  "react/no-unescaped-entities",
  "react/no-unknown-property",
  "react/no-unsafe",
  "react/no-unstable-nested-components",
  "react/prop-types",
  "react/react-in-jsx-scope",
  "react/require-render-return",
  "react/self-closing-comp",
  "simple-import-sort/imports",
]
`;

exports[`Config Snapshots — Rule Names > typescript config rules should match snapshot 1`] = `
[
  "@typescript-eslint/adjacent-overload-signatures",
  "@typescript-eslint/array-type",
  "@typescript-eslint/await-thenable",
  "@typescript-eslint/ban-ts-comment",
  "@typescript-eslint/ban-tslint-comment",
  "@typescript-eslint/class-literal-property-style",
  "@typescript-eslint/consistent-generic-constructors",
  "@typescript-eslint/consistent-indexed-object-style",
  "@typescript-eslint/consistent-return",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-definitions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/dot-notation",
  "@typescript-eslint/indent",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-array-constructor",
  "@typescript-eslint/no-array-delete",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-confusing-non-null-assertion",
  "@typescript-eslint/no-confusing-void-expression",
  "@typescript-eslint/no-deprecated",
  "@typescript-eslint/no-duplicate-enum-values",
  "@typescript-eslint/no-duplicate-type-constituents",
  "@typescript-eslint/no-dynamic-delete",
  "@typescript-eslint/no-empty-function",
  "@typescript-eslint/no-empty-object-type",
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-extra-non-null-assertion",
  "@typescript-eslint/no-extraneous-class",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-for-in-array",
  "@typescript-eslint/no-implied-eval",
  "@typescript-eslint/no-inferrable-types",
  "@typescript-eslint/no-invalid-void-type",
  "@typescript-eslint/no-meaningless-void-operator",
  "@typescript-eslint/no-misused-new",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-misused-spread",
  "@typescript-eslint/no-mixed-enums",
  "@typescript-eslint/no-namespace",
  "@typescript-eslint/no-non-null-asserted-nullish-coalescing",
  "@typescript-eslint/no-non-null-asserted-optional-chain",
  "@typescript-eslint/no-non-null-assertion",
  "@typescript-eslint/no-redundant-type-constituents",
  "@typescript-eslint/no-require-imports",
  "@typescript-eslint/no-this-alias",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-qualifier",
  "@typescript-eslint/no-unnecessary-template-expression",
  "@typescript-eslint/no-unnecessary-type-arguments",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unnecessary-type-constraint",
  "@typescript-eslint/no-unnecessary-type-conversion",
  "@typescript-eslint/no-unnecessary-type-parameters",
  "@typescript-eslint/no-unsafe-argument",
  "@typescript-eslint/no-unsafe-assignment",
  "@typescript-eslint/no-unsafe-call",
  "@typescript-eslint/no-unsafe-declaration-merging",
  "@typescript-eslint/no-unsafe-enum-comparison",
  "@typescript-eslint/no-unsafe-function-type",
  "@typescript-eslint/no-unsafe-member-access",
  "@typescript-eslint/no-unsafe-return",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unsafe-unary-minus",
  "@typescript-eslint/no-unused-expressions",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-constructor",
  "@typescript-eslint/no-useless-default-assignment",
  "@typescript-eslint/no-var-requires",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/non-nullable-type-assertion-style",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-as-const",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-find",
  "@typescript-eslint/prefer-for-of",
  "@typescript-eslint/prefer-function-type",
  "@typescript-eslint/prefer-includes",
  "@typescript-eslint/prefer-literal-enum-member",
  "@typescript-eslint/prefer-namespace-keyword",
  "@typescript-eslint/prefer-nullish-coalescing",
  "@typescript-eslint/prefer-optional-chain",
  "@typescript-eslint/prefer-promise-reject-errors",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/prefer-readonly-parameter-types",
  "@typescript-eslint/prefer-reduce-type-parameter",
  "@typescript-eslint/prefer-regexp-exec",
  "@typescript-eslint/prefer-return-this-type",
  "@typescript-eslint/prefer-string-starts-ends-with",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/related-getter-setter-pairs",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/require-await",
  "@typescript-eslint/restrict-plus-operands",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "@typescript-eslint/triple-slash-reference",
  "@typescript-eslint/unbound-method",
  "@typescript-eslint/unified-signatures",
  "@typescript-eslint/use-unknown-in-catch-callback-variable",
  "constructor-super",
  "dot-notation",
  "getter-return",
  "no-array-constructor",
  "no-class-assign",
  "no-const-assign",
  "no-dupe-args",
  "no-dupe-class-members",
  "no-dupe-keys",
  "no-empty-function",
  "no-func-assign",
  "no-implied-eval",
  "no-import-assign",
  "no-new-native-nonconstructor",
  "no-new-symbol",
  "no-obj-calls",
  "no-redeclare",
  "no-return-await",
  "no-setter-return",
  "no-this-before-super",
  "no-throw-literal",
  "no-undef",
  "no-unreachable",
  "no-unsafe-negation",
  "no-unused-expressions",
  "no-unused-vars",
  "no-useless-constructor",
  "no-var",
  "no-with",
  "prefer-const",
  "prefer-promise-reject-errors",
  "prefer-rest-params",
  "prefer-spread",
  "require-await",
  "semi",
]
`;

exports[`Config Snapshots — Rule Names > vue config rules should match snapshot 1`] = `
[
  "@typescript-eslint/await-thenable",
  "@typescript-eslint/consistent-return",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/dot-notation",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-array-delete",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-confusing-void-expression",
  "@typescript-eslint/no-deprecated",
  "@typescript-eslint/no-duplicate-type-constituents",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-for-in-array",
  "@typescript-eslint/no-implied-eval",
  "@typescript-eslint/no-meaningless-void-operator",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-misused-spread",
  "@typescript-eslint/no-mixed-enums",
  "@typescript-eslint/no-redundant-type-constituents",
  "@typescript-eslint/no-unnecessary-boolean-literal-compare",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-qualifier",
  "@typescript-eslint/no-unnecessary-template-expression",
  "@typescript-eslint/no-unnecessary-type-arguments",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unnecessary-type-conversion",
  "@typescript-eslint/no-unnecessary-type-parameters",
  "@typescript-eslint/no-unsafe-argument",
  "@typescript-eslint/no-unsafe-assignment",
  "@typescript-eslint/no-unsafe-call",
  "@typescript-eslint/no-unsafe-enum-comparison",
  "@typescript-eslint/no-unsafe-member-access",
  "@typescript-eslint/no-unsafe-return",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unsafe-unary-minus",
  "@typescript-eslint/no-unused-expressions",
  "@typescript-eslint/no-useless-default-assignment",
  "@typescript-eslint/non-nullable-type-assertion-style",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-find",
  "@typescript-eslint/prefer-includes",
  "@typescript-eslint/prefer-nullish-coalescing",
  "@typescript-eslint/prefer-optional-chain",
  "@typescript-eslint/prefer-promise-reject-errors",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/prefer-readonly-parameter-types",
  "@typescript-eslint/prefer-reduce-type-parameter",
  "@typescript-eslint/prefer-regexp-exec",
  "@typescript-eslint/prefer-return-this-type",
  "@typescript-eslint/prefer-string-starts-ends-with",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/related-getter-setter-pairs",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/require-await",
  "@typescript-eslint/restrict-plus-operands",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "@typescript-eslint/unbound-method",
  "@typescript-eslint/use-unknown-in-catch-callback-variable",
  "no-unused-expressions",
  "vue/attribute-hyphenation",
  "vue/attributes-order",
  "vue/block-order",
  "vue/comment-directive",
  "vue/component-definition-name-casing",
  "vue/first-attribute-linebreak",
  "vue/html-closing-bracket-newline",
  "vue/html-closing-bracket-spacing",
  "vue/html-end-tags",
  "vue/html-indent",
  "vue/html-quotes",
  "vue/html-self-closing",
  "vue/jsx-uses-vars",
  "vue/max-attributes-per-line",
  "vue/multi-word-component-names",
  "vue/multiline-html-element-content-newline",
  "vue/mustache-interpolation-spacing",
  "vue/no-arrow-functions-in-watch",
  "vue/no-async-in-computed-properties",
  "vue/no-child-content",
  "vue/no-computed-properties-in-data",
  "vue/no-deprecated-data-object-declaration",
  "vue/no-deprecated-delete-set",
  "vue/no-deprecated-destroyed-lifecycle",
  "vue/no-deprecated-dollar-listeners-api",
  "vue/no-deprecated-dollar-scopedslots-api",
  "vue/no-deprecated-events-api",
  "vue/no-deprecated-filter",
  "vue/no-deprecated-functional-template",
  "vue/no-deprecated-html-element-is",
  "vue/no-deprecated-inline-template",
  "vue/no-deprecated-model-definition",
  "vue/no-deprecated-props-default-this",
  "vue/no-deprecated-router-link-tag-prop",
  "vue/no-deprecated-scope-attribute",
  "vue/no-deprecated-slot-attribute",
  "vue/no-deprecated-slot-scope-attribute",
  "vue/no-deprecated-v-bind-sync",
  "vue/no-deprecated-v-is",
  "vue/no-deprecated-v-on-native-modifier",
  "vue/no-deprecated-v-on-number-modifiers",
  "vue/no-deprecated-vue-config-keycodes",
  "vue/no-dupe-keys",
  "vue/no-dupe-v-else-if",
  "vue/no-duplicate-attributes",
  "vue/no-export-in-script-setup",
  "vue/no-expose-after-await",
  "vue/no-lifecycle-after-await",
  "vue/no-lone-template",
  "vue/no-multi-spaces",
  "vue/no-multiple-slot-args",
  "vue/no-mutating-props",
  "vue/no-parsing-error",
  "vue/no-ref-as-operand",
  "vue/no-required-prop-with-default",
  "vue/no-reserved-component-names",
  "vue/no-reserved-keys",
  "vue/no-reserved-props",
  "vue/no-shared-component-data",
  "vue/no-side-effects-in-computed-properties",
  "vue/no-spaces-around-equal-signs-in-attribute",
  "vue/no-template-key",
  "vue/no-template-shadow",
  "vue/no-textarea-mustache",
  "vue/no-unused-components",
  "vue/no-unused-vars",
  "vue/no-use-computed-property-like-method",
  "vue/no-use-v-if-with-v-for",
  "vue/no-useless-template-attributes",
  "vue/no-v-for-template-key-on-child",
  "vue/no-v-html",
  "vue/no-v-text-v-html-on-component",
  "vue/no-watch-after-await",
  "vue/one-component-per-file",
  "vue/order-in-components",
  "vue/padding-line-between-blocks",
  "vue/prefer-import-from-vue",
  "vue/prop-name-casing",
  "vue/require-component-is",
  "vue/require-default-prop",
  "vue/require-explicit-emits",
  "vue/require-prop-type-constructor",
  "vue/require-prop-types",
  "vue/require-render-return",
  "vue/require-slots-as-functions",
  "vue/require-toggle-inside-transition",
  "vue/require-v-for-key",
  "vue/require-valid-default-prop",
  "vue/return-in-computed-property",
  "vue/return-in-emits-validator",
  "vue/singleline-html-element-content-newline",
  "vue/this-in-template",
  "vue/use-v-on-exact",
  "vue/v-bind-style",
  "vue/v-on-event-hyphenation",
  "vue/v-on-style",
  "vue/v-slot-style",
  "vue/valid-attribute-name",
  "vue/valid-define-emits",
  "vue/valid-define-options",
  "vue/valid-define-props",
  "vue/valid-next-tick",
  "vue/valid-template-root",
  "vue/valid-v-bind",
  "vue/valid-v-cloak",
  "vue/valid-v-else",
  "vue/valid-v-else-if",
  "vue/valid-v-for",
  "vue/valid-v-html",
  "vue/valid-v-if",
  "vue/valid-v-is",
  "vue/valid-v-memo",
  "vue/valid-v-model",
  "vue/valid-v-on",
  "vue/valid-v-once",
  "vue/valid-v-pre",
  "vue/valid-v-show",
  "vue/valid-v-slot",
  "vue/valid-v-text",
]
`;
